# subsync

./: .gitignore  LICENSE  README.md  Taskfile.yml  pyproject.toml
.github/: commit-message-instructions.md
.github/agents/: backend-engineer.agent.md
.github/instructions/: python.instructions.md  spec-context.instructions.md  spec-plan.instructions.md  spec-tasks.instructions.md  spec.instructions.md
spec/context/: data-models.md  dependencies.md  netflix-compliance.md  youtube-compatibility.md
spec/plan/: phase-1-foundation.md  phase-2-core-pipeline.md  phase-3-netflix-compliance.md  phase-4-cli-output.md
spec/tasks/phase-1/: 01-install-dependencies.md  02-error-definitions.md  03-data-models.md  04-url-handler.md  05-final-verification.md  README.md
src/subsync/: errors.py  models.py  url_handler.py
tests/: test_models.py  test_url_handler.py
