[project]
name = "subsync"
version = "0.1.0"
description = "CLI MVP tool to generate subtitles for videos optimized for YouTube"
readme = "README.md"
authors = [
    { name = "Igor Wnek", email = "contact@ikcode.dev" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.13"
dependencies = [
    "openai-whisper>=20250625",
    "rich>=14.2.0",
    "yt-dlp>=2025.12.8",
]

[project.scripts]
subsync = "subsync.cli:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]
